--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,20 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion "28.0.3"
+    compileSdkVersion 30
+    buildToolsVersion "29.0.3"
+
     defaultConfig {
         applicationId "ru.vinyarsky.androidaudioexample"
-        minSdkVersion 19
-        targetSdkVersion 28
+        minSdkVersion 21
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -25,10 +29,10 @@ android {
 }
 
 dependencies {
-    implementation "androidx.legacy:legacy-support-v4:1.0.0"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.annotation:annotation:1.1.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.14.2'
-    implementation 'com.google.android.exoplayer:exoplayer-core:2.9.4'
+    implementation "androidx.media:media:1.1.0"
+    implementation 'com.squareup.okhttp3:okhttp:4.7.2'
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.9.5'
     implementation 'com.google.android.exoplayer:extension-okhttp:2.9.4'
 }
