--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,9 +30,8 @@ android {
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.annotation:annotation:1.1.0'
     implementation "androidx.media:media:1.1.0"
-    implementation 'com.squareup.okhttp3:okhttp:4.7.2'
     implementation 'com.google.android.exoplayer:exoplayer-core:2.11.7'
     implementation 'com.google.android.exoplayer:extension-okhttp:2.11.7'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.11.7'
 }
